Revert "Refactored styles.css to ensure that text-align: center elements were grouped together"
This reverts commit 6cf5ee77f595cf0bcedeb51ce8d77d940a2a34c9.

--- a/src/style.css
+++ b/src/style.css
@@ -10,43 +10,32 @@ body.warm {
   color: #000000;
 }
 
-#container.cool,
-#container.warm {
+#container.cool {
   max-width: 600px;
+  background: linear-gradient(270deg, #5585b5 0%, #bbe4e9 50%);
   margin: 0 auto;
   border-radius: 10px;
   padding: 10px 30px 30px 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
-#container.cool {
-  background: linear-gradient(270deg, #5585b5 0%, #bbe4e9 50%);
-}
-
 #container.warm {
+  max-width: 600px;
   background: linear-gradient(90deg, #d26330aa 0%, #ceeb76c2 50%);
-}
-
-/* Grouping all elements that require text-align: center */
-#city,
-#icon,
-#current-temperature,
-#weather-description,
-#weather-data,
-#feels-like,
-#chronology,
-form,
-footer {
-  text-align: center;
+  margin: 0 auto;
+  border-radius: 10px;
+  padding: 10px 30px 30px 10px;
 }
 
 #city {
+  text-align: center;
   font-weight: 700;
   font-size: 45px;
   margin-bottom: 10px;
 }
 
 #icon {
+  text-align: center;
   font-size: 50px;
 }
 
@@ -56,12 +45,40 @@ footer {
   font-size: 20px;
 }
 
+#current-temperature {
+  text-align: center;
+  font-size: 50px;
+}
+
+#weather-description {
+  text-align: center;
+}
+
+#weather-data {
+  text-align: center;
+}
+
+#city-input {
+  width: 30%;
+  padding: 5px 6px;
+}
+
+#city-submit {
+  padding: 5px 8px;
+  height: 30px;
+}
+
+#feels-like {
+  text-align: center;
+}
+
 #feels-like {
   font-size: 20px;
 }
 
 #chronology {
   display: block;
+  text-align: center;
   font-size: 15px;
   font-weight: 700;
 }
@@ -70,6 +87,10 @@ footer {
   display: flex;
   justify-content: center;
   height: 90px;
+}
+
+form {
+  text-align: center;
 }
 
 strong {
@@ -81,17 +102,8 @@ input {
 }
 
 footer {
+  text-align: center;
   color: #000000;
   font-size: 14px;
   font-family: "Courier New", Courier, monospace;
-}
-
-#city-input {
-  width: 30%;
-  padding: 5px 6px;
-}
-
-#city-submit {
-  padding: 5px 8px;
-  height: 30px;
 }
